# Coursable

./: .gitignore  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  功能请求.md  问题报告.md
.github/workflows/: ci.yaml  release.yaml
Coursable/: __init__.py  __main__.py  _json_parser.py  _requests.py  constants.py  coursetable.py
Coursable/lang/: __init__.py  zh-CN.yml
Coursable/mapping/: __init__.py
bjut_coursetable/: __init__.py
bjut_coursetable/lang/: __init__.py
bjut_coursetable/mapping/: nbnhhsh.yml
coursable/: __main__.py  _lazy_imports.py  _requests.py  constants.py  course.py  coursetable.py  utils.py
coursable/examples/: example.json
coursable/lang/: zh-CN.yml
coursable/mapping/: __init__.py  default.yml  nbnhhsh.yml
courseable/: _json_parser.py  course.py  coursetable.py
courseable/mapping/: default.yml
test/: __init__.py  test_course.py
