[project]
name = "coursable"
description = "BJUT course table parser"
authors = [
    {name = "KoolShow",email = "51787949+KoolShow@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]
dynamic = ["version"]


[project.optional-dependencies]
url = ["requests (>=2.32.3,<3.0.0)"]
orjson = ["orjson (>=3.10.15,<4.0.0)"]
ujson = ["ujson (>=5.10.0,<6.0.0)"]
ics = ["icalendar (>=6.1.1,<7.0.0)"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.12"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
strict = false